[package]
name = "hyperlane-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A template Tangle Blueprint (AVS) for a Hyperlane application service."
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/drewstone/gaia-ai-agent-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "tangle-blueprint"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
structopt = "0.3.26"
color-eyre = "0.6"
tokio = { version = "1.39", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
gadget-sdk = { git = "https://github.com/tangle-network/gadget", default-features = false, features = ["std", "getrandom"] }
parking_lot = "0.12.3"
serde_yaml = "0.9.34"
alloy-primitives = "0.7.2"
thiserror = { version = "1.0.64", default-features = false }

[build-dependencies]
blueprint-metadata = "0.1"

