[package]
name = "hyperlane-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A template Tangle Blueprint (AVS) for a Hyperlane application service."
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132" }
color-eyre = "0.6"
tokio = { version = "1.39", default-features = false, features = ["full"] }
serde_yaml = "0.9.34"
alloy-primitives = "0.7.2"
thiserror = { version = "1.0.64", default-features = false }

[dependencies.gadget-sdk]
version = "0.2.3"
features = ["getrandom"]

[build-dependencies]
blueprint-metadata = "0.1.6"

